Fixed edit button wrapping in forum skins

--- a/skins/bootstrap_forums_skin/style.less
+++ b/skins/bootstrap_forums_skin/style.less
@@ -614,16 +614,25 @@ body.round_avatars .single_topic .evo_content_block .ft_avatar {
 }
 .evo_content_block, .evo_comment {
 	.panel-footer {
-		.row {
-			> div {
-				> a, > span:not(.btn-group), > div, .btn-group > a {
-					margin-top: 2px;
-					margin-bottom: 2px;
-				}
-				.vote_spam .btn-group a {
-					margin-top: 0;
-					margin-bottom: 0;
-				}
+		> a, > span:not(.btn-group), > div {
+			margin-top: 2px;
+			margin-bottom: 2px;
+		}
+		.vote_spam {
+			margin-right: 10px;
+			.btn-group a {
+				margin-top: 0;
+				margin-bottom: 0;
+			}
+		}
+		.comment_edit_btn {
+			display: none;
+			margin-right: 5px;
+		}
+		.action_btn_group {
+			float: right;
+			.comment_edit_btn {
+				display: inline-block;
 			}
 		}
 	}
@@ -738,6 +747,19 @@ aside .widget_core_coll_search_form {
 			margin-top: 12px !important;
 		}
 	}
+	.evo_content_block, .evo_comment {
+		.panel-footer {
+			.comment_edit_btn {
+				display: inline-block;
+			}
+			.action_btn_group {
+				float: left;
+				.comment_edit_btn {
+					display: none;
+				}
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 991px) {
@@ -849,8 +871,6 @@ aside .widget_core_coll_search_form {
 		.evo_comment_post_title {
 			display: block !important;
 		}
-	}
-	.vs_published {
 		.evo_comment_avatar {
 			margin-right: 15px;
 		}
